# licenser-rs

./: Cargo.toml
src/: main.rs
