[package]
name = "licenser"
version = "0.1.0"
authors = ["Riley Quinn <merileyquinn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
clap = "2.33.0"